<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.schooner.edtechadvisor.ClassDojo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawable = "@drawable/clinton"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:layout_margin="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name2"
                android:layout_margin="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name3"
                android:layout_margin="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name4"
                android:layout_margin="16dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkbox1"
                android:layout_margin="16dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkbox2"
                android:layout_margin="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "Add Another Review"
                style = "@style/AppTheme.Button"
                android:layout_gravity = "center"/>

        </LinearLayout>
    </ScrollView>
